fix scrollbar

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
     padding: 20px;
     background-color: #000;
     border: 2px solid white;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 #textoutput {
